# beaver

./: .github-ci.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
IaC/deploy/: pyproject.toml
IaC/deploy/deploy/: update_ecs.py
backend/apps/beaver_api/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  start.sh
backend/apps/beaver_api/beaver_api/: main.py
backend/apps/beaver_api/beaver_api/api/: server.py
backend/apps/beaver_api/beaver_api/beaver_api/: asgi.py  filters.py  models.py  protocols.py  settings.py  test_views.py  urls.py  views.py  wsgi.py
backend/apps/beaver_api/beaver_api/code_api/: apps.py  filters.py  mixins.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/beaver_api/beaver_api/commands/: app.py
backend/apps/beaver_api/beaver_api/language_api/: admin.py  apps.py
backend/apps/beaver_api/beaver_api/logging_utils/: setup_logger.py
backend/apps/beaver_api/scripts/: deploy.sh
backend/apps/beaver_api/src/: manage.py
backend/apps/beaver_linter/: README.md  pyproject.toml
backend/apps/beaver_linter/beaver_linter/: main.py  parsers.py  services.py
backend/apps/beaver_linter/src/: main.py  parsers.py  schemas.py  services.py  settings.py  utils.py
backend/apps/beaver_linter/tests/: test_utils.py
dataset/algorithms/classic_algorithms/SubsetSum/: pyproject.toml
dataset/algorithms/classic_algorithms/bubble_sort/: pyproject.toml
dataset/algorithms/classic_algorithms/count_sort/: pyproject.toml
dataset/algorithms/classic_algorithms/graph_is_acyclic/: pyproject.toml
dataset/algorithms/classic_algorithms/graph_kruskal/: pyproject.toml
dataset/algorithms/classic_algorithms/graph_list/: pyproject.toml
dataset/algorithms/classic_algorithms/hashmap_chaining/: pyproject.toml
dataset/algorithms/classic_algorithms/heap_sort/: pyproject.toml
dataset/algorithms/classic_algorithms/insertion_sort/: pyproject.toml
dataset/algorithms/classic_algorithms/interpolation_search/: pyproject.toml
dataset/algorithms/classic_algorithms/k_merge/: pyproject.toml
dataset/algorithms/classic_algorithms/k_stat/: pyproject.toml
dataset/algorithms/classic_algorithms/min_max_matrix/: pyproject.toml
dataset/algorithms/classic_algorithms/quick_sort/: pyproject.toml
dataset/algorithms/classic_algorithms/selection_sort/: pyproject.toml
dataset/algorithms/classic_algorithms/stable_match/: pyproject.toml
dataset/algorithms/classic_algorithms/subset_sum/: pyproject.toml
dataset/algorithms/classic_algorithms/union_find/: pyproject.toml
dataset/algorithms/leetcode_problems/MergeSortedArray/: pyproject.toml
dataset/python/: README.md  meta.beaver.yaml  pyproject.toml
dataset/python/algorithms/classical_problems/: intervals_distribution.py  intervals_max_independent.py  intervals_plan.py  min_max_matrix.py  stable_marriage_problem.py
dataset/python/algorithms/data_structures/: binary_search_tree.py  hashmap_addressing.py
dataset/python/algorithms/graph/: graph_dijkstra.py  graph_is_bipartite.py  graph_list.py  graph_prim.py
dataset/python/algorithms/other/: count_inversions.py  k_stat.py  lru.py
dataset/python/algorithms/search/: interpolation_search.py  naive_search.py
dataset/python/algorithms/sort/: insertion_sort.py
dataset/python/classical_problems/robot_problem/: pyproject.toml
dataset/python/data_structures/binary_search_tree/: pyproject.toml
dataset/python/graph/graph_is_bipartite/: pyproject.toml
dataset/python/other/count_inversions/: pyproject.toml
dataset/python/search/kmp_search/: pyproject.toml
dataset/python/search/naive_search/: pyproject.toml
dataset/python/tests/classical_problems/: test_intervals_distribution.py  test_intervals_max_independent.py  test_intervals_plan.py  test_min_max_matrix.py  test_nearest_pair_of_points.py  test_robot_problem.py  test_stable_marriage_problem.py  test_stable_match.py  test_subarray_sum.py
dataset/python/tests/data_structures/: test_binary_heap.py  test_binary_search_tree.py  test_hashmap_addressing.py  test_hashmap_chaining.py  test_inverted_index.py  test_priority_queue.py  test_union_find.py
dataset/python/tests/dynamic_programming/: test_bin_packing.py  test_k_merge.py  test_kadane.py  test_subset_sum.py  test_weight_interval_planning.py
dataset/python/tests/graph/: test_graph_dastur.py  test_graph_dijkstra.py  test_graph_euler_cycle.py  test_graph_gis_coloring.py  test_graph_is_acyclic.py  test_graph_is_bipartite.py  test_graph_kruskal.py  test_graph_list.py  test_graph_matrix.py  test_graph_prim.py  test_graph_tsp.py  test_oriented_graph.py
dataset/python/tests/other/: test_count_inversions.py  test_hoffman_coding.py  test_k_stat.py  test_lru.py
dataset/python/tests/search/: test_binary_search.py  test_bm_search.py  test_interpolation_search.py  test_kmp_search.py  test_linear_search.py  test_naive_search.py  test_rk_search.py
dataset/python/tests/sort/: test_bubble_sort.py  test_count_sort.py  test_count_sort_v2.py  test_heap_sort.py  test_insertion_sort.py  test_merge_sort.py  test_merge_sort_v2.py  test_quick_sort.py  test_quick_sort_v2.py  test_selection_sort.py
dataset/python/tests/substring_search/: test_bm_search.py  test_kmp_search.py  test_naive_search.py  test_rk_search.py
frontend/beaver_terminal/: README.md  pyproject.toml
frontend/beaver_terminal/beaver_cli/: main.py  main.tcss
frontend/beaver_terminal/beaver_cli/assets/: error_screen.tcss  help.md  help_screen.tcss  settings_screen.tcss
frontend/beaver_terminal/beaver_cli/components/: code.py  error_message.py  error_screen.py  game_display.py  header.py  help_screen.py  info_label.py  language_display.py  link_to_code.py  result_display.py  settings_screen.py  tag_display.py  time_display.py  time_label.py
frontend/beaver_terminal/beaver_cli/schemas/: code_document.py  common.py  language.py  statistic.py  tags.py
frontend/beaver_terminal/beaver_cli/services/: api.py  code_document.py  language.py  tag.py
frontend/beaver_terminal/beaver_cli/settings/: settings.py
frontend/beaver_terminal/beaver_cli/utils/: session.py
(+594 files in other folders)
