[tool.poetry]
name = "beaver_cli"
version = "0.1.0"
description = ""
authors = ["nikita zigman <zigman.nikita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
textual = {extras = ["syntax"], version = "^0.70.0"}
textual-dev = "^1.5.1"
syntax = "^0.1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
