[tool.poetry]
name = "beaver-api"
version = "0.1.0"
description = ""
authors = ["nikita zigman <zigman.nikita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
djangorestframework = "^3.14.0"
markdown = "^3.5.2"
django-filter = "^23.5"
django-split-settings = "^1.2.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.2.0"
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
