[tool.poetry]
name = "src"
version = "0.1.0"
authors = ["nikita zigman <zigman.nikita@gmail.com>"]
readme = "README.md"
documentation = "https://www.geeksforgeeks.org/heap-sort/"
description = "Heap Sort Algorithm using heapq"
keywords = ["heap sort", "sorting", "data structures", "heapq"]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
