[tool.poetry]
name = "src"
version = "0.1.0"
authors = ["nikita zigman <zigman.nikita@gmail.com>"]
readme = "README.md"
documentation = "https://www.geeksforgeeks.org/kth-smallestlargest-element-unsorted-array/"
description = "Kth smallest/largest element in an array"
keywords = ["kth element", "sorting", "heap", "data structures"]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
